@@ -1,12 +1,12 @@
 #!/bin/sh
 
-echo libtoolize
+echo libtoolize -f --automake
 libtoolize -f --automake
-echo aclocal...
+echo aclocal -I macros...
 aclocal -I macros
 echo autoheader...
 autoheader
-echo automake...
+echo automake -a...
 automake -a
 echo autoconf...
 autoconf
